--- a/_posts/2021-11-02-ml-array.md
+++ b/_posts/2021-11-02-ml-array.md
@@ -7,9 +7,7 @@ categories: antennas
 
 It is assumed that the reader understands how a linear antenna array works. With this in mind, we explore the concept of the minimum redundancy linear array. The motivation to create such an array is to provide the maximum resolution for a given number of elements in the array. This is done by reducing the number of redundant spacings in the antenna array. The antenna array factor is calculated using the following formula.
 
-$$ \frac{\delta E_{x}}{\delta t} = \frac{\delta f(z-ct)}{\delta t} = f^{\prime}(z - ct)\Big(\frac{\delta(z-ct)}{\delta t}\Big) = -c*f^{\prime}(z - ct) $$
-
-$$ \frac{\delta^2 E_{x}}{\delta t^2} = \frac{\delta}{\delta t} \Big(\frac{\delta Ex}{\delta t}\Big)= f^{\prime\prime}(z - ct)\Big(\frac{\delta(z-ct)}{\delta t}\Big) = c^2*f^{\prime\prime}(z - ct) $$
+$$ AF(\theta) = \sum_{i=1}^N e^{j\pi d_icos(\theta)} $$
 
 Using this formula and the spacing calculations specified in the literature, we can compare the two arrays. The first is the uniform linear array with equal spacing of half wavelength. The second is the spacing based on the MLA calculations multiplies by half wavelengths. From this it is clear that although we main lobe width is lower, the power is distributed into the side lobes. The power HAS to go somewhere. This will also require a more complicated feeding network because of the non-uniform distance which can be done with clever design or phase shifters.
 
